feat: Add base of server side rendering

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,11 +6,31 @@ license = "MIT"
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
-[dependencies]
-yew = "0.20.0"
-yew-router = "0.17.0"
-stylist = { vesrion = "0.11.0", features = ["yew_integration", "yew_use_style"]}
+[[bin]]
+name = "personal_branding_hydrate"
+required-features = ["hydration"]
 
 [[bin]]
-name = "personal_branding"
-required-features = ["yew/csr"]
+name = "personal_branding_server"
+required-features = ["ssr"]
+
+[dependencies]
+yew = "0.20"
+yew-router = "0.17"
+futures = { version = "0.3", features = ["std"], default-features = false }
+stylist = { vesrion = "0.11", features = ["yew_integration", "yew_use_style"]}
+
+[target.'cfg(target_arch = "wasm32")'.dependencies]
+wasm-bindgen-futures = "0.4"
+
+[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
+tokio = { version = "1.15", features = ["full"] }
+axum = "0.5"
+tower = { version = "0.4", features = ["make"] }
+tower-http = { version = "0.3", features = ["fs"] }
+clap = { version = "3.2", features = ["derive"] }
+hyper = { version = "0.14", features = ["server", "http1"] }
+
+[features]
+hydration = ["yew/hydration"]
+ssr = ["yew/ssr"]
