--- a/.gitignore
+++ b/.gitignore
@@ -1,13 +1,25 @@
-/target
-/dist
+# See https://help.github.com/articles/ignoring-files/ for more about ignoring files.
 
+# dependencies
 /node_modules
+/.pnp
+.pnp.js
 
-Cargo.lock
-package-lock.json
+# testing
+/coverage
 
-**/*.rs.bk
+# production
+/build
 
-/.idea
+# misc
+.DS_Store
+.env.local
+.env.development.local
+.env.test.local
+.env.production.local
 
-tailwind.css
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
+
+.idea/
