feat: Add base of application

--- a/.gitignore
+++ b/.gitignore
@@ -1,13 +1,27 @@
-/target
-/dist
+# If you prefer the allow list template instead of the deny list, see community template:
+# https://github.com/github/gitignore/blob/main/community/Golang/Go.AllowList.gitignore
 
-/node_modules
+# Binaries for programs and plugins
+*.exe
+*.exe~
+*.dll
+*.so
+*.dylib
 
-Cargo.lock
-package-lock.json
+# Test binary, built with `go test -c`
+*.test
 
-**/*.rs.bk
+# Output of the go coverage tool, specifically when used with LiteIDE
+*.out
 
+# Dependency directories (remove the comment below to include it)
+vendor/
+
+# Go workspace file
+go.work
+
+# Output directory
+web/
+
+# IDE directory
 /.idea
-
-tailwind.css
