feat: Add base theme hook

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -18,6 +18,8 @@ required-features = ["ssr"]
 yew = "0.20"
 yew-router = "0.17"
 futures = { version = "0.3", features = ["std"], default-features = false }
+serde = "1.0"
+gloo = "0.8"
 
 [target.'cfg(target_arch = "wasm32")'.dependencies]
 wasm-bindgen-futures = "0.4"
