--- a/Cargo.toml
+++ b/Cargo.toml
@@ -20,6 +20,7 @@ yew-router = "0.17"
 futures = { version = "0.3", features = ["std"], default-features = false }
 serde = "1.0"
 gloo = "0.8"
+pulldown-cmark = { version = "0.9.2", default-features = false }
 
 [target.'cfg(target_arch = "wasm32")'.dependencies]
 wasm-bindgen-futures = "0.4"
